
buildscript {
    ext {
        springBootVersion = '2.0.0.RELEASE'
    }
    repositories {
        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

//compileJava{
//    doFirst(
//        options.compilerArgs = [
//            '--add-modules', 'java.xml.bind'],
//        classpath = files()
//    )
//}

task dockerBuild(type:Exec,dependsOn:build){
    workingDir './'
    commandLine "PowerShell", "copy ./src/main/resources/Dockerfile ."
    workingDir "./build/libs"
    commandLine "PowerShell", "docker build -t springboot ."
}

apply plugin: 'org.springframework.boot'

apply plugin: 'java'
apply plugin: 'kotlin'


group = 'xyz.ivyxjc'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
    mavenLocal()
    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
}

dependencies {
    testCompile('org.springframework.boot:spring-boot-starter-test:2.0.0.RELEASE')

    compile('org.springframework.boot:spring-boot-starter-web:2.0.0.RELEASE')

    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.0.0.RELEASE'

    compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.1'

    runtime group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'

    compile group: 'com.alibaba', name: 'druid', version: '1.1.8'

    compile('org.springframework.boot:spring-boot-starter-jdbc')

    //swagger
    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'

    compile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.6'
    compile group: 'org.mybatis.generator', name: 'mybatis-generator-maven-plugin', version: '1.3.6'

    compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '9.0.5'

}



